--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal-container show-modal" id="modal">
+    <div class="modal-container" id="modal">
         <div class="modal">
             <i class="fa fa-times close-icon" id="close-modal"></i>
             <div class="modal-header">
                 <h3>Add Bookmark</h3>
             </div>
             <div class="modal-content">
-                <form class="bookmark-form">
+                <form class="bookmark-form" id="bookmark-form">
                     <!-- Website Name -->
                     <div class="form-group">
                         <label for="website-name" class="form-label">Website Name</label>
